src/styles/globals.css
@import "tailwindcss/base";

@import "tailwindcss/components";

@import "tailwindcss/utilities";

@import url('https://fonts.googleapis.com/css2?family=Itim&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Permanent+Marker&display=swap');



* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.text-outline-thick {
  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black;
}
.text-outline-thin {
  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
}

.nunito {
  font-family: 'Nunito', sans-serif;
}
.loom {
  font-family: 'Circular-Loom';
}

.nunito-font-class-body {
  @apply text-lg nunito;
}
.loom-font-class-heading {
  @apply text-lg loom;
}

.element {
  mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect x='0' y='0' width='100' height='100' rx='25' ry='25' /><circle cx='50' cy='50' r='40' /></svg>");
  mask-repeat: no-repeat;
  mask-size: 300px 300px;
  overflow: hidden;
}

